--- a/index.html
+++ b/index.html
@@ -10,126 +10,140 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+
     <title>Студія</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
-      <nav class="nav-link">
-        <a href="./index.html" class="logo-link">Web<span class="logo-studio">Studio</span></a>
-        <ul class="list">
-          <li>
-            <a class="link" href="./index.html"><span class="current">Студія</span></a>
-          </li>
-          <li><a class="link" href="./portfolio.html">Портфоліо</a></li>
-          <li><a class="link" href="">Контакти</a></li>
+      <div class="container">
+        <nav class="nav-link">
+          <a href="./index.html" class="logo-link">Web<span class="logo-studio">Studio</span></a>
+          <ul class="site-nav list">
+            <li class="item"><a class="link current" href="./index.html">Студія</a>
+            </li>
+            <li class="item"><a class="link current" href="./portfolio.html">Портфоліо</a></li>
+            <li class="item"><a class="link" href="">Контакти</a></li>
+          </ul>
+        </nav>
+        <ul class="contact-link list">
+          <li class="contact"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li class="contact"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
-      </nav>
-      <ul class="contact-link list">
-        <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-      </ul>
+      </div>
     </header>
     <main>
-      <section>
-        <div class="hero">
-          <h1 class="title-hero">Ефективні рішення для вашого бізнесу</h1>
-          <button type="button" class="button-hero">Замовити послугу</button>
+      <section class="section">
+        <div class="container">
+          <div class="hero">
+            <h1 class="title-hero">Ефективні рішення для вашого бізнесу</h1>
+            <button type="button" class="button-hero">Замовити послугу</button>
+          </div>
         </div>
       </section>
-      <section>
-        <h2><span class="visually-hidden">Особливості</span></h2>
-        <ul class="special list">
-          <li>
-            <h3 class="subtitle">УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p class="text">
-              Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
-            </p>
-          </li>
-          <li>
-            <h3 class="subtitle">ПУНКТУАЛЬНІСТЬ</h3>
-            <p class="text">
-              Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
-            </p>
-          </li>
-          <li>
-            <h3 class="subtitle">ПЛАНУВАННЯ</h3>
-            <p class="text">Так само консультація з широким активом значною мірою зумовлює.</p>
-          </li>
-          <li>
-            <h3 class="subtitle">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p class="text">
-              Значимість цих проблем настільки очевидна, що реалізація планових завдань.
-            </p>
-          </li>
-        </ul>
+      <section class="section">
+        <div class="container">
+          <h2 class="visually-hidden">Особливості</h2>
+          <ul class="special list">
+            <li>
+              <h3 class="subtitle">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <p class="text">
+                Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+              </p>
+            </li>
+            <li>
+              <h3 class="subtitle">ПУНКТУАЛЬНІСТЬ</h3>
+              <p class="text">
+                Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+              </p>
+            </li>
+            <li>
+              <h3 class="subtitle">ПЛАНУВАННЯ</h3>
+              <p class="text">Так само консультація з широким активом значною мірою зумовлює.</p>
+            </li>
+            <li>
+              <h3 class="subtitle">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <p class="text">
+                Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
-      <section>
-        <h2 class="title">Чим ми займаємося</h2>
-        <ul class="list">
-          <li>
-            <img src="./images/box1.jpg" alt="робочий процес за столом" width="370" />
-          </li>
-          <li>
-            <img src="./images/box2.jpg" alt="смартфон у руці" width="370" />
-          </li>
-          <li>
-            <img src="./images/box3.jpg" alt="планшет в руках" width="370" />
-          </li>
-        </ul>
+      <section class="section">
+        <div class="container">
+          <h2 class="title">Чим ми займаємося</h2>
+          <ul class="list">
+            <li>
+              <img src="./images/box1.jpg" alt="робочий процес за столом" width="370" />
+            </li>
+            <li>
+              <img src="./images/box2.jpg" alt="смартфон у руці" width="370" />
+            </li>
+            <li>
+              <img src="./images/box3.jpg" alt="планшет в руках" width="370" />
+            </li>
+          </ul>
+        </div>
       </section>
-      <section>
-        <h2 class="title">Наша команда</h2>
-        <ul class="about list">
-          <li>
-            <img src="./images/avatar1.jpg" alt="фото Ігора Дем'яненка" width="270" />
-            <h3 class="subtitle-about">Ігор Дем'яненко</h3>
-            <p class="text">Product Designer</p>
-          </li>
-          <li>
-            <img src="./images/avatar2.jpg" alt="фото Ольги Рєпіної" width="270" />
-            <h3 class="subtitle-about">Ольга Рєпіна</h3>
-            <p class="text">Frontend Developer</p>
-          </li>
-          <li>
-            <img src="./images/avatar3.jpg" alt="фото Миколи Тарасова" width="270" />
-            <h3 class="subtitle-about">Микола Тарасов</h3>
-            <p class="text">Marketing</p>
-          </li>
-          <li>
-            <img src="./images/avatar4.jpg" alt="фото Михайла Єрмакова" width="270" />
-            <h3 class="subtitle-about">Михайло Єрмаков</h3>
-            <p class="text">UI Designer</p>
-          </li>
-        </ul>
+      <section class="section about">
+        <div class="container">
+          <h2 class="title">Наша команда</h2>
+          <ul class="avatar list">
+            <li>
+              <img src="./images/avatar1.jpg" alt="фото Ігора Дем'яненка" width="270" />
+              <h3 class="subtitle-about">Ігор Дем'яненко</h3>
+              <p class="text">Product Designer</p>
+            </li>
+            <li>
+              <img src="./images/avatar2.jpg" alt="фото Ольги Рєпіної" width="270" />
+              <h3 class="subtitle-about">Ольга Рєпіна</h3>
+              <p class="text">Frontend Developer</p>
+            </li>
+            <li>
+              <img src="./images/avatar3.jpg" alt="фото Миколи Тарасова" width="270" />
+              <h3 class="subtitle-about">Микола Тарасов</h3>
+              <p class="text">Marketing</p>
+            </li>
+            <li>
+              <img src="./images/avatar4.jpg" alt="фото Михайла Єрмакова" width="270" />
+              <h3 class="subtitle-about">Михайло Єрмаков</h3>
+              <p class="text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer>
-      <a href="./index.html" class="logo-link">Web<span class="logo-studio">Studio</span></a>
-      <address>
-        <ul class="contact-link list">
-          <li>
-            <a class="link" href="м.Київ,пр-тЛесіУкраїнки,26"
-              ><span class="adress">м. Київ, пр-т Лесі Українки, 26</span></a
-            >
-          </li>
-          <li>
-            <a class="link" href="mailto:info@devstudio.com"
-              ><span class="mailto">info@devstudio.com</span></a
-            >
-          </li>
-          <li>
-            <a class="link" href="tel:+380961111111"><span class="tel">+38 096 111 11 11</span></a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a href="./index.html" class="logo-link">Web<span class="logo-studio">Studio</span></a>
+        <address>
+          <ul class="contact-link list">
+            <li>
+              <a class="link" href="м.Київ,пр-тЛесіУкраїнки,26"
+                ><span class="adress">м. Київ, пр-т Лесі Українки, 26</span></a 
+              >
+            </li>
+            <li>
+              <a class="link" href="mailto:info@devstudio.com"
+                ><span class="mailto">info@devstudio.com</span></a
+              >
+            </li>
+            <li>
+              <a class="link" href="tel:+380961111111"
+                ><span class="tel">+38 096 111 11 11</span></a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
